[project]
name = "comfyui_animationnodes"
description = "NODES:Animated Offset Padding, Animated Rotation & Zoom"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/SimonHeese/ComfyUI_AnimationNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_AnimationNodes"
Icon = ""
